--- a/src/components/StudentCard.css
+++ b/src/components/StudentCard.css
@@ -47,6 +47,11 @@
   border-color: #f9a825;
 }
 
+.export-mode .student-card.filled.locked {
+  background-color: white;
+  border-color: black;
+}
+
 .student-card.filled.dragging {
   opacity: 0.7;
 }
@@ -136,7 +141,7 @@
   }
 
   .student-card.filled.locked {
-    background-color: #fff8e1 !important;
+    background-color: white !important;
   }
 
   .student-card.empty {
