--- a/src/App.css
+++ b/src/App.css
@@ -202,6 +202,30 @@
   border-color: transparent;
 }
 
+.btn-rename {
+  position: absolute;
+  right: 35px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #d0d0d0;
+  color: #666;
+  border: none;
+  border-radius: 50%;
+  width: 26px;
+  height: 26px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: all 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-rename:hover {
+  background-color: #b8b8b8;
+  transform: translateY(-50%) scale(1.1);
+}
+
 .btn-delete {
   position: absolute;
   right: 5px;
