--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap');
+
 :root {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Space Grotesk', system-ui, -apple-system, 'Segoe UI', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color: #333;
@@ -41,6 +41,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  font-family: 'Fraunces', 'Space Grotesk', system-ui, sans-serif;
   margin: 0;
   line-height: 1.2;
 }
